<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Firebase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    //Register.        <string name="btn_register">Register</string>
    <string name="err_reg">ERROR:invalid email, please  try again</string>
    <string name="reg_txtUsername">bobbo@gmail.com</string>
    <string name="reg_txtPassword">passwordhej</string>
    //Menu(start)        <string name="btn_login">Login</string>
    <string name="login_txtUsername">bobbo@gmail.com</string>
    <string name="login_txtPassword">passwordhej</string>
    <string name="btn_about">About</string>
    <string name="btn_Register_new_user">Register new user</string>
    <string name="err_login">Error: invalid login data, please try again</string>
    //About.        <string name="about_loremipsum">A briefly description off the application and the application name. The app version is 1.0. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius libero justo, sed cursus augue lobortis id. Donec quam diam, auctor sit amet semper dignissim, dignissim at felis. Aliquam fringilla lacinia eros. Fusce vitae congue sem, posuere commodo est. Suspendisse potenti. Mauris vel dictum quam. Maecenas luctus justo et vestibulum lacinia. Pellentesque et vestibulum massa, sit amet euismod orci. Donec et pellentesque eros, eleifend ultrices eros. Donec nec cursus mi, nec placerat urna. Etiam interdum tortor magna, quis venenatis odio vestibulum placerat. Aenean elit nibh, venenatis eget elit at, sagittis mattis lectus. Nulla commodo turpis at felis condimentum porttitor.</string>
    <string name="btn_about_back">Back</string>
    //Group.        <string name="group_startNewGroup">group bannan</string>
    <string name="btn_createNewGroup">Create new group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gg">gg</string>

    //Firebase Error Codes
    <string name="INVALID_PASSWORD">The specified user account password is incorrect.</string>
    <string name="UNKNOWN_ERROR">Root of error is unknown!</string>
    <string name="NETWORK_ERROR">An error occurred while attempting to contact the authentication server.</string>
    <string name="USER_DOES_NOT_EXIST">The specified user account does not exist.</string>
    <string name="EMAIL_TAKEN">User account cannot be created because the specified email address is already in use.</string>
    <string name="DEFAULT_ERROR">could not localize the error.</string>
    <string name="INVALID_CREDENTIALS">The specified authentication credentials are invalid. This may occur when credentials are malformed or expired.</string>
    <string name="INVALID_AUTH_ARGUMENTS">The specified credentials are malformed or incomplete. Please refer to the error message, error details, and Firebase documentation for the required arguments for authenticating with this provider.</string>
    <string name="INVALID_TOKEN">The specified authentication token is invalid. This can occur when the token is malformed, expired, or the secret that was used to generate it has been revoked.</string>

</resources>
